# nara

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bitcoin.conf  canister_ids.json  dfx.json  diagnose.sh  package-lock.json  package.json
bitcoin_data/regtest/blocks/index/: 000005.ldb  MANIFEST-000004
bitcoin_data/regtest/chainstate/: 000005.ldb  MANIFEST-000004
bitcoin_data/regtest/indexes/txindex/: 000005.ldb  MANIFEST-000004
bitcoin_data/regtest/wallets/database/: log.0000000001
fetch/: README_stripe_protocol.md  agent.py  chat_proto.py  config.py  health_proto.py  icp_canister.py  main.py  messages.py  requirements.txt  stripe_payment_proto.py  utils.py  wallet.py  webhook.py
fetch/config/: messages.py  settings.py  tools.py
fetch/messages/: create_payment_message.py
fetch/principal/: private.pem
fetch/protocols/: chat_proto.py  stripe_payment_proto.py
fetch/services/: identity_service.py
fetch/utils/: candid.py  canister.py  coin.py  context.py  identity.py  pricing.py  stripe.py  text.py
scripts/: bitcoin.mining_block.sh  build.icp_ledger.sh  setup.sh
src/ai/: Cargo.toml  readme.MD  trade_predictor.did
src/ai/src/: lib.rs
src/escrow/: Cargo.toml  escrow.did
src/escrow/src/: lib.rs
src/escrow/src/bitcoin/: common.rs  ecdsa.rs  lib.rs  p2pkh.rs
src/escrow/src/bitcoin/service/: bitcoin_address.rs  bitcoin_balance.rs  bitcoin_current_fee_percentiles.rs  bitcoin_send.rs  bitcoin_utxos.rs
src/escrow/src/ethereum/: lib.rs
src/escrow/src/ethereum/service/: ethereum_address.rs  ethereum_balance.rs  ethereum_send.rs  mod.rs
src/escrow/src/solana/: api.rs  ed25519.rs  main.rs  solana_wallet.rs
src/escrow/src/solana/rpc/libs/client/: CHANGELOG.md  README.md
src/escrow/src/solana/rpc/libs/client/src/: lib.rs
src/escrow/src/solana/rpc/libs/client/src/request/: mod.rs
src/escrow/src/solana/rpc/libs/types/src/rpc_client/: mod.rs
src/frontend/: index.html  package.json  postcss.config.js
src/frontend/src/: App.jsx  index.css  index.scss
src/frontend/src/components/layout/: Footer.jsx  Navbar.jsx
src/frontend/src/components/ui/: Button.jsx  Container.jsx
src/wallet/: Cargo.toml  wallet.did
src/wallet/src/: lib.rs
src/wallet/src/bitcoin/: ecdsa.rs  lib.rs  service.rs
src/wallet/src/bitcoin/service/: bitcoin_address.rs  bitcoin_balance.rs  bitcoin_send.rs
src/wallet/src/ethereum/: lib.rs
src/wallet/src/ethereum/service/: ethereum_address.rs  ethereum_balance.rs  ethereum_send.rs
src/wallet/src/solana/: api.rs  lib.rs  main.rs  state.rs
src/wallet/src/solana/rpc/libs/client/: Cargo.toml
src/wallet/src/solana/rpc/libs/client/src/: ed25519.rs
src/wallet/src/solana/rpc/libs/client/src/fixtures/: mod.rs
src/wallet/src/solana/rpc/libs/types/: CHANGELOG.md  Cargo.toml
src/wallet/src/solana/rpc/libs/types/src/lifecycle/: mod.rs
src/wallet/src/solana/rpc/libs/types/src/solana/transaction/: error.rs  mod.rs
