[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"  # Updated to match ic-cdk version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ONNX inference with IC-compatible configuration
tract-onnx = { version = "0.21.13", default-features = false }
tract-core = { version = "0.21.13", default-features = false }

# IC-compatible getrandom configuration
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

# Additional dependencies that might be needed
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
num-traits = "0.2"
thiserror = "1.0"

[profile.release]
opt-level = 's'  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"