[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.4"

hex = "0.4.3"
bitcoin = "0.32.5"
serde = "1.0.132"
serde_bytes = "0.11.15"
leb128 = "0.2.5"
