[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.2"
serde = "1.0.132"
serde_bytes = "0.11.15"
serde_json = "1.0.140"
serde_with = "3.12.0"
getrandom = { version = "*", default-features = false, features = ["custom"] }

# Bitcoin
hex = "0.4.3"
bitcoin = "0.32.5"
leb128 = "0.2.5"

# Ethereum
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", default-features = false, features = [
  "icp",
  "sol-types",
  "json",
  "contract",
] }
