[package]
name = "sol_rpc_types"
version = "1.0.0"
description = "Candid types used by the SOL RPC canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
candid = { workspace = true }
canlog = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder-client-types = "=2.3.3"
solana-commitment-config = "=2.2.1"
solana-hash = "=2.3.0"
solana-instruction = "=2.3.0"
solana-pubkey = "=2.4.0"
solana-reward-info = "=2.2.1"
solana-signature = "=2.3.0"
solana-transaction = { version = "=2.2.3", features = ["bincode"] }
solana-transaction-error = "=2.2.1"
solana-transaction-status-client-types = "=2.3.3"
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true }
proptest = { workspace = true }
